recursion.logo.koch.Koch.scala.error
Compilation error:
Koch:17: error: not found: value snowside
    snowside(levels-1,length/3)
    ^Koch:19: error: not found: value snowside
    snowside(levels-1,length/3)
    ^